master learn - progressbar

--- a/public/css/flip.css
+++ b/public/css/flip.css
@@ -1,115 +1,112 @@
+/* THE MAINCONTAINER HOLDS EVERYTHING */
+.maincontainer {
+    position: absolute;
+    width: 800px;
+    height: 350px;
+    background: none;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
+/* THE CARD HOLDS THE FRONT AND BACK FACES */
+.thecard {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transform-style: preserve-3d;
+    transition: all 0.8s ease;
+}
 
+/* THE PSUEDO CLASS CONTROLS THE FLIP ON MOUSEOVER AND MOUSEOUT */
+.thecard.hover {
+    transform: rotateY(180deg);
+}
 
-        /* THE MAINCONTAINER HOLDS EVERYTHING */
-        .maincontainer {
-            position: absolute;
-            width: 800px;
-            height: 350px;
-            background: none;
-            top: 30%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-
-        }
-
-        /* THE CARD HOLDS THE FRONT AND BACK FACES */
-        .thecard {
-            position: relative;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-            transform-style: preserve-3d;
-            transition: all 0.8s ease;
-        }
-
-        /* THE PSUEDO CLASS CONTROLS THE FLIP ON MOUSEOVER AND MOUSEOUT */
-        .thecard.hover {
-            transform: rotateY(180deg);
-        }
-
-        
-        /* .thecard:hover {
+/* .thecard:hover {
             transform: rotateY(180deg);
         } */
 
-        /* THE FRONT FACE OF THE CARD, WHICH SHOWS BY DEFAULT */
-        .thefront {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-            backface-visibility: hidden;
-            overflow: hidden;
-            background: #7FBCD2;
-            color: #000;
-        }
+/* THE FRONT FACE OF THE CARD, WHICH SHOWS BY DEFAULT */
+.thefront {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    backface-visibility: hidden;
+    overflow: hidden;
+    background: #7fbcd2;
+    color: #000;
+}
 
+/* THE BACK FACE OF THE CARD, WHICH SHOWS ON MOUSEOVER */
+.theback {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    backface-visibility: hidden;
+    overflow: hidden;
+    background: #f5c0c0;
+    color: #333;
+    text-align: center;
+    transform: rotateY(180deg);
+}
 
-        /* THE BACK FACE OF THE CARD, WHICH SHOWS ON MOUSEOVER */
-        .theback {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-            backface-visibility: hidden;
-            overflow: hidden;
-            background: #F5C0C0;
-            color: #333;
-            text-align: center;
-            transform: rotateY(180deg);
-        }
+/*This block (starts here) is merely styling for the flip card, and is NOT an essential part of the flip code */
+.thefront h1 {
+    font-family: "zilla slab", sans-serif;
+    padding: 30px;
+    font-weight: bold;
+    font-size: 120px;
+    text-align: center;
+    color: #e1ffee;
+}
 
+.theback h1 {
+    font-family: "zilla slab", sans-serif;
+    padding: 20px;
+    font-weight: bold;
+    font-size: 48px;
+    text-align: center;
+    color: #7fbcd2;
+}
 
-        /*This block (starts here) is merely styling for the flip card, and is NOT an essential part of the flip code */
-        .thefront h1{
-            font-family: 'zilla slab', sans-serif;
-            padding: 30px;
-            font-weight: bold;
-            font-size: 120px;
-            text-align: center;
-            color: #E1FFEE;
-        }
+.thefront p {
+    font-family: "zilla slab", sans-serif;
+    padding: 30px;
+    font-weight: normal;
+    font-size: 18px;
+    text-align: center;
+    /* color: #A5F1E9; */
+}
 
-        .theback h1 {
-            font-family: 'zilla slab', sans-serif;
-            padding: 20px;
-            font-weight: bold;
-            font-size: 48px;
-            text-align: center;
-            color: #7FBCD2;
-        }
+/*This block (ends here) is merely styling for the flip card, and is NOT an essential part of the flip code */
 
+.bottom-btn {
+    position: absolute;
+    bottom: 0px;
+    left: 330px;
+}
 
-        .thefront p,
-        .theback p {
-            font-family: 'zilla slab', sans-serif;
-            padding: 30px;
-            font-weight: normal;
-            font-size: 18px;
-            text-align: center;
-            /* color: #A5F1E9; */
-        }
-
-        /*This block (ends here) is merely styling for the flip card, and is NOT an essential part of the flip code */
-
-
-
-
-
-        .progress .progress-bar {
-            animation-name: animateBar;
-            animation-iteration-count: 1;
-            animation-timing-function: ease-in;
-            animation-duration: .8s;
-        }
-        @keyframes animateBar {
-            0% {transform: translateX(-100%);}
-            100% {transform: translateX(0);}
-        }
+.progress .progress-bar {
+    animation-name: animateBar;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 0.8s;
+}
+@keyframes animateBar {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
